tests/record-misspelled-field/analyze.err
Error: Field `namee` does not exist in record of type `{name: string, age: int}`.

> 7|   me.namee
       ^^^^^^^^
tests/record-misspelled-field/main.pa:7:3
